@@ -106,6 +106,7 @@ export("+.section",
        magneticField,
        makeFilter,
        makeSection,
+       mapArrows,
        mapContour,
        mapImage,
        mapLines,
