@@ -461,6 +461,30 @@ mapPoints <- function(longitude, latitude, ...)
     }
 }
 
+mapArrows <- function(longitude0, latitude0,
+                      longitude1=longitude0, latitude1=latitude0,
+                      length=0.25, angle=30,
+                      code=2, col=par("fg"), lty=par("lty"),
+                      lwd=par("lwd"), ...)
+{
+    if (length(longitude0) != length(latitude0))
+        stop("lengths of longitude0 and latitude0 must match but they are ", length(longitude0), " and ", length(longitude1))
+    if (length(longitude1) != length(latitude1))
+        stop("lengths of longitude1 and latitude1 must match but they are ", length(longitude1), " and ", length(longitude1))
+    ok <- !is.na(longitude0) & !is.na(latitude0) & !is.na(longitude1) & !is.na(latitude1)
+    longitude0 <- longitude0[ok]
+    latitude0 <- latitude0[ok]
+    longitude1 <- longitude1[ok]
+    latitude1 <- latitude1[ok]
+    if (length(longitude) > 0) {
+        xy0 <- mapproject(longitude0, latitude0)
+        xy1 <- mapproject(longitude1, latitude1)
+        arrows(xy0$x, xy0$y, xy1$x, xy1$y,
+               length=length, angle=angle, code=code, col=col, lty=lty, lwd=lwd, ...)
+    }
+}
+
+
 formatPosition <- function(latlon, isLat=TRUE, type=c("list", "string", "expression"), showHemi=TRUE)
 {
     type <- match.arg(type)
